--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,27 @@ img {
     height: 250px;
 }
 
+.flipping {
+    animation-name: flip;
+    animation-duration: 1s;
+}
+
 button {
     display: block;
     margin: 20px auto;
+    border: none;
+    padding: 10px;
+}
+
+h1 {
+    margin-top: 100px;
+}
+
+@keyframes flip {
+    from {
+        transform: rotateY(0deg);
+    }
+    to {
+        transform: rotateY(360deg);
+    }
 }
